--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 </div>
             </button>
             
-            <button class="item" onclick="contactBtn2()">
+            <button class="item" onclick="discord()">
                 
                 <div class="info">
                     <h3>Discord</h3>
@@ -83,6 +83,10 @@
 
     </div>
 
+    <div class="divider">
+
+    </div>
+    +-
     <div class="divider">
 
     </div>
